--- a/Test/WebContent/css/amazing.css
+++ b/Test/WebContent/css/amazing.css
@@ -21,41 +21,13 @@ body{
 	flex-basis: 70%;
 }
 .nav{
-	display: flex;
-	 flex-direction: column;
-	 justify-content: space-between;
 	flex-basis: 30%;
 }
 /* ルーレットのデザイン */
 .outline {
-	margin-top:20px;
     display: inline-block;
     text-align: center;
 
-}
-
-/* テーブルデザイン */
-table{
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.status{
-	margin-top:20px;
-}
-table tr{
-  background-image: linear-gradient(40deg, #d3d3d3 0%, #808080 74%);
-}
-
-table tr:last-child *{
-  border-bottom: none;
-}
-
-table th,table td{
-  text-align: center;
-  border: solid 2px #fff;
-  color: white;
-  padding: 10px 0;
 }
 
 h3{
@@ -96,6 +68,7 @@ h3{
 	flex-direction: column;
 	float:right;
 	padding-left:20px;
+	position:relative;
 }
 
 .pName{
@@ -107,4 +80,28 @@ h3{
 .pName{
 
 	margin-top:0px;
+}
+
+/* テーブルデザイン */
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.status{
+	margin-top:20px;
+}
+table tr{
+  background-image: linear-gradient(40deg, #d3d3d3 0%, #808080 74%);
+}
+
+table tr:last-child *{
+  border-bottom: none;
+}
+
+table th,table td{
+  text-align: center;
+  border: solid 2px #fff;
+  color: white;
+  padding: 10px 0;
 }
